Feature/dpo 2839 area geometry fails (#160)
DPO-2839 Liikennetiedotteiden aluegeometrian muodostus epäonnistuu toisinaan
* Fixed logging and not returning empty geometry but null geometry instead
* Myös korjaus: ERROR: cannot execute UPDATE in a read-only transaction